--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node",
     "build": "babel src --out-dir dist && copyfiles -u 1 src/**/* dist",
@@ -26,6 +27,8 @@
     "@babel/node": "^7.24.7",
     "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
+    "copyfiles": "^2.4.1",
+    "ejs-lint": "^0.1.1",
     "nodemon": "^3.1.3"
   }
 }
