--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.24.7",
     "copyfiles": "^2.4.1",
     "ejs-lint": "^0.1.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.3"
   }
 }
