--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
+    "sweetalert2": "^11.14.0",
     "url": "^0.11.4"
   },
   "devDependencies": {
