--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "jwt-decode": "^4.0.0",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "sweetalert2": "^11.14.0",
@@ -41,6 +42,4 @@
   },
   "homepage": "https://github.com/Proyecto-Becerra-Modulo-Uno/frontend#readme",
   "description": ""
-
-  }
-
+}
