Actualisacion de views.perfil y cambios con el backent

--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "url": "https://github.com/Proyecto-Becerra-Modulo-Uno/frontend/issues"
   },
   "homepage": "https://github.com/Proyecto-Becerra-Modulo-Uno/frontend#readme",
+  "keywords": [],
   "description": ""
 }
